# gin

./: .gitignore  .gitmodules  Cargo.toml  README.md
begin/: Cargo.toml
begin/src/: dep_cache.rs  flask.rs  main.rs
begin/src/command/: add.rs  audit.rs  build.rs  doc.rs  init.rs  mod.rs  new.rs  run.rs
begin/src/command/version/: bump.rs
begin/src/tui/: mod.rs
begin/src/tui/footer/: keybind.rs  mod.rs
begin/src/tui/header/: tabs_content.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  compiler.rs  exit_status.rs  expr.rs  gin_type.rs  lex.rs  main.rs  mlir.rs  module.rs  ngin.rs  parse.rs  parser.rs  tests.rs  token.rs
compiler/src/expr/: control_flow.rs  define.rs  literal.rs  mod.rs
compiler/src/lexer/: mod.rs  source_file.rs
compiler/src/ngin/: compiler_error.rs  mod.rs  source_file.rs  user_input.rs  value.rs
compiler/src/ngin/gin_type/: mod.rs  number.rs
compiler/src/ngin/parser/: mod.rs
compiler/src/ngin/validator/: mod.rs  symbol_table.rs  type_checker.rs  verifier.rs
crates/analyze/: Cargo.toml
crates/analyze/src/: completions.rs  hover.rs  lib.rs  package.rs  queries.rs
crates/analyze/tests/: hover.rs  hover_debug.rs  ty_env_invalidation.rs
crates/ast/: Cargo.toml
crates/ast/src/: completions.rs  doc_comment.rs  file_ast.rs  folder.rs  hover.rs  ident.rs  impl_block.rs  import_alias.rs  interface_hash.rs  lib.rs  module_qualify.rs  parameter.rs  path.rs  pattern.rs  signature.rs  source.rs  span.rs  tag.rs  ty.rs  ty_state.rs  type_expr.rs  variant.rs  visit.rs
crates/ast/src/analysis/: const_value.rs  copy.rs  desugar_borrows.rs  desugar_threads.rs  flow.rs  flow_analyzer.rs  infer.rs  infer_convention.rs  mod.rs  (+1 more)
crates/ast/tests/: arithmetic_debug.rs  ast_equality_tests.rs  import_alias.rs  import_debug.rs  ownership_flow_tests.rs  test_error_spans.rs  test_span_in_parser.rs  transform_tests.rs
crates/codegen/: Cargo.toml
crates/codegen/benches/: codegen_bench.rs
crates/codegen/src/: lib.rs  mlir_ext.rs
crates/codegen/tests/: test_asm.rs  test_i128_const.rs  test_mlir_source_locations.rs  test_print.rs  test_string_compile.rs  test_typed_ast.rs
crates/database/: Cargo.toml
crates/database/src/: engine.rs  input_database.rs  lib.rs  package.rs  queries.rs  salsa_engine.rs  semantic_queries.rs
crates/database/tests/: ty_env_invalidation.rs
crates/lexer/: Cargo.toml
crates/lexer/benches/: lexer_bench.rs
crates/lexer/src/: debug.rs  handwritten.rs  lib.rs  token.rs
crates/lexer/tests/: lexer_tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: completions.rs  hover.rs  lib.rs  source.rs
crates/lsp/tests/: hover.rs  hover_debug.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parser_bench.rs
crates/parser/src/: content_hash.rs  cursor.rs  declare.rs  impl_block.rs  lib.rs  module.rs  params.rs  path.rs  query.rs  tag.rs  top_level.rs
crates/parser/tests/: arithmetic_debug.rs  ast_equality_tests.rs  bind_body_doc_comment_trivia.rs  debug_maybe_simplified.rs  generic_method_bind.rs  import_debug.rs  newline_expression_tests.rs  ownership_parser_tests.rs  parser_hang_test.rs  test_error_spans.rs  test_module_imports.rs  test_package_imports.rs  test_span_in_parser.rs
crates/typeck/: Cargo.toml
crates/typeck/benches/: typeck_bench.rs
crates/typeck/src/: check.rs  completions.rs  env.rs  flow.rs  flow_analyzer.rs  hover.rs  infer.rs  lib.rs  resolve.rs  salsa_update.rs  source.rs  ty.rs  type.rs
crates/typeck/tests/: generic_method_unification.rs  hover.rs  hover_debug.rs  import_bare_name.rs  import_goto.rs  test_narrowing.rs  unknown_binding_suggestion.rs
gin-language-server/: Cargo.toml
gin-language-server/src/: main.rs
ginc/: Cargo.toml
ginc/benches/: lexer_bench.rs
ginc/src/: args.rs  cache.rs  compiler_error.rs  direct_parser.rs  gin_type.rs  intern.rs  lib.rs  main.rs  module.rs  path_registry.rs  source.rs  source_file.rs  value.rs
ginc/src/ast/: ast.rs  doc_comment.rs  ident.rs  impl_block.rs  mod.rs  parameter.rs  path.rs  pattern.rs  signature.rs  spanned.rs  tag.rs
ginc/src/backend/: cache.rs  compile.rs  mod.rs  module_cache.rs
ginc/src/codegen/: lower.rs  mlir_ext.rs  mod.rs
ginc/src/compilation/: compile.rs  completions.rs  hover.rs  mod.rs  native.rs
ginc/src/database/: accumulator.rs  input_database.rs  interface_hash.rs  mod.rs
ginc/src/diagnostic/: category.rs  flaw.rs  info.rs  mod.rs  warn.rs
ginc/src/frontend/: lexer.rs  mod.rs
ginc/src/gin_type/: mod.rs  number.rs
ginc/src/lexer/: mod.rs  semantic_token_type.rs  token.rs
ginc/src/parse/: block.rs  delimited_list.rs  mod.rs  parse.rs
ginc/src/parser/: lex.rs  mod.rs  parse.rs
ginc/src/syntax/: lex.rs  mod.rs  parse.rs  token.rs
ginc/src/typeck/: flow.rs  flow_analyzer.rs  mod.rs
ginc/src/validator/: mod.rs  type_checker.rs  verifier.rs
ginc/tests/: arithmetic_debug.rs  ast_equality_tests.rs  import_debug.rs  lexer_tests.rs  parser_tests.rs  salsa_integration.rs  test_error_spans.rs  test_i128_const.rs  test_narrowing.rs  test_span_in_parser.rs  test_string_compile.rs
ginc/tests/helpers/: mod.rs
tools/begin/: Cargo.toml
tools/begin/src/: main.rs
tools/ginc/: Cargo.toml
tools/ginc/src/: cli.rs  compile.rs  lib.rs  main.rs  module_graph.rs  test_helpers.rs
tools/ginc/tests/: arithmetic.rs  arithmetic_debug.rs  ast_equality_tests.rs  bindings.rs  comparison.rs  control_flow.rs  generic_method_constructor.rs  import_chained_exports.rs  import_cycles.rs  import_debug.rs  literals.rs  test_error_spans.rs  test_i128_const.rs  test_narrowing.rs  test_string_compile.rs
tools/ginfmt/: Cargo.toml
tools/ginfmt/examples/: debug_ast.rs  debug_inline_dashes.rs  test_user_example.rs  verify_fix.rs
tools/ginfmt/src/: align.rs  align_ast.rs  ast_formatter.rs  config.rs  lib.rs  main.rs  visitor.rs
tools/ginfmt/tests/: alignment_fix_test.rs  binds_test.rs  bug_exposure_test.rs  comment_alignment_test.rs  decls_test.rs  idempotency_detailed_test.rs  inline_dash_test.rs
tools/ginlsp/: Cargo.toml
tools/ginlsp/src/: analysis.rs  diagnostics.rs  json.rs  lib.rs  main.rs  state.rs
(+444 files in other folders)
