[workspace]
members = [
    "begin",
    "lib/flask",
    "ginc",
    "ginfmt",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
lsp-types = "0.94.1"
flask = { path = "lib/flask" }
ginc = { path = "ginc" }
