[workspace]
members = [
    "begin",
    "lib/flask",
    "ginc",
    "ginfmt",
    "ginlsp",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
lsp-types = "0.94.1"
flask = { path = "lib/flask" }
ginc = { path = "ginc" }
ginfmt = { path = "ginfmt" }
dashmap = "6.1.0"
indexmap = "2"
log = "0.4"
thiserror = "2.0.11"
salsa = "0.25.2"
crossbeam-channel = "0.5.15"
dirs = "6"
rayon = "1"
sha2 = "0.10"
chumsky = { version = "0.10.1", features = ["pratt", "extension"] }
semver = "1"
