[workspace]
members = [
    "tools/begin",
    "crates/flask",
    "crates/ast",
    "crates/diagnostic",
    "crates/lexer",
    "crates/typeck",
    "crates/codegen",
    "crates/lsp",
    "crates/database",
    "tools/ginc",
    "tools/ginfmt",
    "tools/ginlsp",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
lsp-types = "0.94.1"
flask = { path = "crates/flask" }
ginc = { path = "tools/ginc" }
ast = { path = "crates/ast" }
diagnostic = { path = "crates/diagnostic" }
lexer = { path = "crates/lexer" }
typeck = { path = "crates/typeck" }
codegen = { path = "crates/codegen" }
lsp = { path = "crates/lsp" }
database = { path = "crates/database" }
ginfmt = { path = "tools/ginfmt" }
dashmap = "6.1.0"
indexmap = "2"
log = "0.4"
thiserror = "2.0.11"
salsa = "0.25.2"
crossbeam-channel = "0.5.15"
dirs = "6"
rayon = "1"
sha2 = "0.10"
chumsky = { version = "0.10.1", features = ["pratt", "extension"] }
i256 = "0.2"
semver = "1"
