[package]
authors = [""]
name = "begin"
version = "0.1.0"
edition = "2024"

[dependencies]
# ginc = { path = "../ginc" }
clap = { version = "4.5.41", features = ["derive"] }
ratatui = {version="0.30.0", features=["unstable-widget-ref"]}
crossterm = { version = "0.28.1", features = ["events"] }
flask = { path = "../flask" }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tui-tree-widget = "0.24.0"
