[package]
name = "ginc"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "0.10.1", features = ["pratt", "extension"] }
clap = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
logos = "0.15.1"
merkle_hash = "3.8.0"
once_cell = "1.21.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
lsp-types = { workspace = true }
colored = "3.0.0"
salsa = { workspace = true }
melior = "0.26.3"
mlir-sys = "210.0.1"
log = { workspace = true }
eyre = "0.6.12"
internment = "0.8"
notify-debouncer-mini = "0.4.1"
crossbeam-channel = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
semver.workspace = true

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "lexer_bench"
# harness = false
