[package]
name = "analyze"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { workspace = true }
salsa = { workspace = true }
ast = { workspace = true }
parser = { workspace = true }
typeck = { workspace = true }
diagnostic = { workspace = true }
internment = "0.8"

[dev-dependencies]
ide = { path = "../ide" }
indoc = "2"
parser = { workspace = true }
crossbeam-channel = { workspace = true }

