[package]
name = "ast"
version = "0.1.0"
edition = "2024"

[dependencies]

span = { workspace = true }
soa_derive = "0.14"
indexmap = { workspace = true }
internment = "0.8"
i256 = { workspace = true }
sha2 = "0.10"
serde = { workspace = true }
semver = { workspace = true }
salsa = { workspace = true }
diagnostic = { workspace = true }

[dev-dependencies]
parser = { workspace = true }
