[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { workspace = true }
parser = { workspace = true }
diagnostic = { workspace = true }
span = { workspace = true }
typeck = { workspace = true }
i256 = { workspace = true }
melior = "0.26.3"
mlir-sys = "210.0.1"
internment = "0.8"

[dev-dependencies]
database = { workspace = true }
criterion = { workspace = true }
parser = { workspace = true }

[[bench]]
name = "codegen_bench"
harness = false
