[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
diagnostic = { workspace = true }
span = { workspace = true }
salsa = { workspace = true }
ast = { workspace = true }
parser = { workspace = true }
typeck = { workspace = true }
dashmap = { workspace = true }
crossbeam-channel = { workspace = true }
notify-debouncer-mini = "0.4.1"

[dev-dependencies]
internment = "0.8"
