[package]
name = "lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
diagnostic = { workspace = true }
chumsky = { workspace = true }

internment = "0.8"
i256 = { workspace = true }
memchr = "2.7"
fast-float = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexer_bench"
harness = false
