[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { workspace = true }
diagnostic = { workspace = true }
lexer = { workspace = true }
typeck = { workspace = true }
database = { path = "../database" }
chumsky = { workspace = true }
lsp-types = { workspace = true }
indexmap = { workspace = true }
internment = "0.8"
