[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { workspace = true }
diagnostic = { workspace = true }
lexer = { workspace = true }
parser = { workspace = true }
typeck = { workspace = true }
database = { path = "../database" }

lsp-types = { workspace = true }
indexmap = { workspace = true }
internment = "0.8"
