[package]
name = "typeck"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { workspace = true }
diagnostic = { workspace = true }
i256 = { workspace = true }
indexmap = { workspace = true }
internment = "0.8"
salsa = { workspace = true }
lexer = { workspace = true }

[dev-dependencies]
parser = { workspace = true }
indoc = "2"
crossbeam-channel = { workspace = true }
