[package]
name = "ginc"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { workspace = true }
diagnostic = { workspace = true }
lexer = { workspace = true }
typeck = { workspace = true }
codegen = { workspace = true }
resolve = { workspace = true }
ariadne = "0.5.1"
clap = { workspace = true }
indexmap = { workspace = true }

merkle_hash = "3.8.0"
once_cell = "1.21.3"
parser = { workspace = true }
flask = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
colored = "3.0.0"
log = { workspace = true }
eyre = "0.6.12"
internment = "0.8"
dirs = { workspace = true }
rayon = { workspace = true }
semver.workspace = true

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "lexer_bench"
# harness = false
