[package]
name = "ginfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
ginc = {workspace = true}

parser = { workspace = true }
ast = { workspace = true }
span = { workspace = true }
resolve = { workspace = true }
internment = "0.8"

lexer = { workspace = true }
diagnostic = { workspace = true }
