[package]
name = "gin-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "io-std"] }
dashmap = { workspace = true }
ginc = { workspace = true }
flask = { workspace = true }
ginfmt = { workspace = true }
lsp-types = { workspace = true }
crossbeam-channel = { workspace = true }
salsa = { workspace = true }
